--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
-    server_name ec2-16-171-241-226.eu-north-1.compute.amazonaws.com
+    server_name ec2-16-16-215-52.eu-north-1.compute.amazonaws.com
+
 ;
     server_tokens off;
 
@@ -15,15 +16,14 @@ server {
 
 server {
     listen                443 ssl;
-    server_name           ec2-16-171-241-226.eu-north-1.compute.amazonaws.com
-;
+    server_name           ec2-16-16-215-52.eu-north-1.compute.amazonaws.com;
     access_log            /var/log/nginx/shinyproxy.access.log;
     error_log             /var/log/nginx/shinyproxy.error.log error;
     server_tokens off;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
-    ssl_certificate       /etc/letsencrypt/live/ec2-16-171-241-226.eu-north-1.compute.amazonaws.com/fullchain.pem;
-    ssl_certificate_key   /etc/letsencrypt/live/ec2-16-171-241-226.eu-north-1.compute.amazonaws.com/privkey.pem;
+    ssl_certificate       /etc/letsencrypt/live/ec2-16-16-215-52.eu-north-1.compute.amazonaws.com/fullchain.pem;
+    ssl_certificate_key   /etc/letsencrypt/live/ec2-16-16-215-52.eu-north-1.compute.amazonaws.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
